# small-code

./: .gitignore
algorithm-datastructure/: README.md  tmp.py
algorithm-datastructure/_tmp/: 1.py  3.py  4.py
algorithm-datastructure/backtracking/: combination-sum.py  combinations.py  generate-parentheses.py  generate-parentheses2.py  permutations.py
algorithm-datastructure/bst/: capacity-to-ship-packages-within-d-days.py  capacity-to-ship-packages-within-days.py  construct-binary-tree-from-preorder-and-inorder-traversal.py  find-minimum-in-rotated-sorted-array.py  kth-smallest-element-in-a-bst.py  search-insert-position.py  validate-binary-search-tree.py
algorithm-datastructure/devide-and-conquer/: longest-substring-with-at-least-k-repeating-characters.py  min-max-game.py  test_karatsuba-algorithm.py
algorithm-datastructure/dfs/: group-of-substring.py
algorithm-datastructure/dynamic-programming/: all-divisions-with-the-highest-score-of-binary-array.py  find-two-non-overlapping-sub-arrays-each-with-target-sum.py  longest-increasing-subsequence.py  longest-palindromic-substring.py  maximum-product-subarray.py  regular-expression-matching.py  removing-minimal-number-of-magic-beans.py  (+2 more)
algorithm-datastructure/others/document-search/rust-inverted-index/: Cargo.toml
algorithm-datastructure/others/document-search/rust-inverted-index/archives/: v0.rs
algorithm-datastructure/others/document-search/rust-inverted-index/src/: article.rs  errors.rs  import.rs  index.rs  main.rs  search.rs
c/: README.md  hello.c
heap/: Cargo.toml
python/: reference-or-copy.py
(+457 files in other folders)
